Change Log
==========

v0.4.3
-------
    * timestamp collection added
    * uuid field added

v0.4.2
------
    * Fix stack trace formatting so it displays nicely in mongo pretty mode

v0.4.1
------
    * log message JSON serializaztion check pass or convert to str
    * total revamp of log message parser.
    * Handler classes completely revampled
    * added verbose option to MongoLogHandler that will print all log entries to console
    * 100% test coverage of MongoLogHandler classes
    * flake8 compatible (mostly)

v0.3.2
------
    * support for verbose and simple LogRecord Types
    * python 3 support
    * travis-ci support
    * coveralls support
    * support for all versions of django that use LOGGING
    * support for pymongo>=2.4
    * removed support for python 3.2 and 3.3 as django no longer supports them

v0.3.0
------

    * Support log string concatenation.  aka logger.error("%s", "astring").
    * Support dictionary based messages.  :)
    * Converted project to a full django project
    # support for pymongo driver 2.7 and greater
    * Added this CHANGELOG:  #14
    * Basic log tests # 15

v0.2.0
------

    * Basic Functionality